Name:          manila
Version:       0.1.0
Cabal-Version: >= 1.2
License:       CC0
License-File:  LICENSE
Author:        Jonathan Potter
Homepage:      https://github.com/jpotterm/manila-hs
Category:      Financial
Synopsis:      A unit testing framework for Haskell
Build-Type:    Simple
data-files:    migrations/*.sql
data-dir:      data

Executable manila
    Build-Depends:
        HDBC == 2.4.0.0,
        HDBC-sqlite3 == 2.3.3.0,
        time-recurrence == 0.9.2,
        aeson == 0.7.0.6,
        csv == 0.1.2,
        hxt == 9.3.1.7,
        boxes == 0.1.3,
        wreq == 0.2.0.0,
        directory == 1.2.1.0,
        unix == 2.7.0.1,
        process == 1.2.0.0,
        network-uri == 2.6.0.1,
        lens-aeson == 1.0.0.1,
        bytestring == 0.10.4.0,
        text == 1.1.0.0,
        http-client == 0.4.0,
        lens == 4.4.0.2,
        time == 1.4.2,
        convertible == 1.1.0.0,
        old-locale == 1.0.0.6,
        filepath == 1.3.0.2,
        base
    Main-Is: Main.hs
    Hs-Source-Dirs: src
