Name:          manila
Version:       0.1.0.0
Cabal-Version: >= 1.6
License:       PublicDomain
License-File:  LICENSE
Author:        Jonathan Potter
Homepage:      https://github.com/jpotterm/manila-hs
Category:      Financial
Synopsis:      A unit testing framework for Haskell
Build-Type:    Simple
data-files:    migrations/*.sql
data-dir:      data

Executable manila
    Build-Depends:
        base == 4.7.*,
        aeson == 0.7.*,
        boxes == 0.1.*,
        bytestring == 0.10.*,
        cond == 0.4.*,
        convertible == 1.1.*,
        csv == 0.1.*,
        directory == 1.2.*,
        filepath == 1.3.*,
        HDBC == 2.4.*,
        HDBC-sqlite3 == 2.3.*,
        http-client == 0.4.*,
        hxt == 9.3.*,
        lens == 4.4.*,
        lens-aeson == 1.0.*,
        network-uri == 2.6.*,
        old-locale == 1.0.*,
        process == 1.2.*,
        text == 1.1.*,
        time == 1.4.*,
        time-recurrence == 0.9.*,
        unix == 2.7.*,
        uuid == 1.3.*,
        wreq == 0.2.*
    Main-Is: Main.hs
    Hs-Source-Dirs: src
